--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "uuid": "^8.3.2"
+    "mongoose": "^6.2.0",
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
