--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fs": "0.0.1-security",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
