--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "YahalomTestsServer",
+  "name": "QuizMakerServer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "node --nolazy --inspect app.js",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "set NODE_ENV=production&&node app.js",
+    "dev": "set NODE_ENV=develop&&nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +21,7 @@
     "mongoose": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
+    "winston": "^3.6.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
